Fix dark mode issue

--- a/src/AppForSEII2526.Maui/wwwroot/css/app.css
+++ b/src/AppForSEII2526.Maui/wwwroot/css/app.css
@@ -958,6 +958,29 @@ body {
     }
 
 
+/* ===== DARK MODE para resumen de precio y botón ===== */
+.dark-mode .selection-summary {
+    background-color: #2c2c2c; /* gris oscuro neutro */
+    border-color: var(--color-border);
+    color: #FFFFFF;
+}
+
+    .dark-mode .selection-summary p strong {
+        color: var(--color-orange-primary);
+    }
+
+.dark-mode .create-plan-btn.disabled {
+    background-color: #a65c2e; /* tono más oscuro que #F29C63 */
+    color: #FFFFFF;
+    opacity: 0.6;
+}
+.dark-mode .create-plan-btn {
+    background-color: var(--color-orange-primary);
+    color: #FFFFFF;
+}
+
+
+
 /* TICK DE SELECCIONAR CLASES */
 .class-card {
     background-color: var(--color-white);
